<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/nav_header_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:contentDescription="@string/placeholderProfilePictureHeaderText"
        android:focusable="true"
        android:foreground="@drawable/green_circle_pfp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_placeholder" />

    <TextView
        android:id="@+id/tvHeaderUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="8dp"
        android:text="@string/placeholderUsernameHeaderText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tvHeaderEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/placeholderEmailHeaderText"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
</LinearLayout>
