<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!-- VideoView as the background -->
    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />

    <!-- ScrollView to make the content scrollable -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- TextView for Register title -->
            <TextView
                android:id="@+id/tvTitleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/btnRegister"
                android:textColor="@color/material_dynamic_primary50"
                android:textSize="48sp" />

            <!-- EditText for Email -->
            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/etEmail"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:textColor="@color/white"
                android:textColorHint="@color/material_dynamic_neutral80" />

            <!-- EditText for Username -->
            <EditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/etUsername"
                android:inputType="text"
                android:maxLength="13"
                android:textColor="@color/white"
                android:textColorHint="@color/material_dynamic_neutral80" />

            <!-- EditText for Password -->
            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/white"
                android:textColorHint="@color/material_dynamic_neutral80" />

            <!-- Button for Register -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/material_dynamic_primary40"
                android:text="@string/btnRegister" />

            <!-- TextView for Click to Login -->
            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tvClickToLogin"
                android:textColor="@color/design_default_color_secondary_variant" />

            <!-- ProgressBar -->
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
